--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "clsx": "^1.2.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "highlight.js": "^11.8.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.7",
+    "markdown-it-highlightjs": "^4.0.1",
+    "markdown-it-toc-done-right": "^4.2.0",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -26,6 +31,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "daisyui": "^3.1.9"
   }
 }
