--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: mr-smithers-excellent/docker-build-push@v5
         name: Build & push Docker image
         with:
-          image: inyaw/inyaw-next
+          image: inyaa/inyaw-next
           tags: latest
           registry: docker.io
           dockerfile: Dockerfile
