--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
@@ -31,7 +32,6 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "daisyui": "^3.1.9"
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
