--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,20 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node18
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: Install
-        run: npm install
-      - name: Build
-        run: npm run build
-      - name: 查看当前文件夹
-        run: ls
-      - name: 删除无用文件夹
-        run: rm -rf src public node_modules
+        name: 拉取代码
       - uses: mr-smithers-excellent/docker-build-push@v5
-        name: Build & push Docker image
+        name: 登录并编译dockerfile
         with:
           image: inyaa/inyaw-next
           tags: latest
@@ -33,7 +22,7 @@ jobs:
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-      - name: executing remote ssh commands using password
+      - name: ssh远程部署
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
