--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,14 +13,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         name: 拉取代码
-      - name: 配置环境变量
-        run: export DOCKER_BUILDKIT=1
       - uses: mr-smithers-excellent/docker-build-push@v5
         name: 登录并编译dockerfile
         with:
           image: inyaa/inyaw-next
           tags: latest
           registry: docker.io
+          multiPlatform: true
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
