--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@vavt/md-editor-extension": "^3.0.0",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
     "eslint": "8.44.0",
@@ -23,6 +24,7 @@
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-highlightjs": "^4.0.1",
     "markdown-it-toc-done-right": "^4.2.0",
+    "md-editor-rt": "^4.2.2",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
