--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "gitalk": "^1.8.0",
     "highlight.js": "^11.8.0",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.7",
