--- a/package.json
+++ b/package.json
@@ -11,26 +11,22 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@jsdevtools/rehype-toc": "^3.0.2",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
-    "contentlayer": "^0.3.4",
-    "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
-    "gitalk": "^1.8.0",
-    "highlight.js": "^11.8.0",
-    "markdown-it": "^13.0.1",
-    "markdown-it-anchor": "^8.6.7",
-    "markdown-it-toc-done-right": "^4.2.0",
     "next": "13.4.8",
-    "next-contentlayer": "^0.3.4",
     "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-pretty-code": "^0.10.0",
+    "rehype-slug": "^5.1.0",
+    "shiki": "^0.14.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
