--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "next": "13.4.8",
+    "next-auth": "^4.23.0",
     "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-children-utilities": "^2.9.0",
     "react-dom": "18.2.0",
     "rehype-pretty-code": "^0.10.0",
     "rehype-slug": "^5.1.0",
