--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/react-headroom": "^3.2.0",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
     "eslint": "8.44.0",
@@ -26,6 +27,8 @@
     "react": "18.2.0",
     "react-children-utilities": "^2.9.0",
     "react-dom": "18.2.0",
+    "react-headroom": "^3.2.1",
+    "react-use": "^17.4.0",
     "rehype-pretty-code": "^0.10.0",
     "rehype-slug": "^5.1.0",
     "shiki": "^0.14.3",
